--- a/index.html
+++ b/index.html
@@ -3,23 +3,41 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title>UI Counter</title>
-    <link rel="stylesheet" href="src/css/index.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Calculator</title>
+    <link rel="stylesheet" type="text/css" href="src/css/index.css" />
 </head>
 
 <body>
     <div id="app">
-        <div class="container">
-            <h1 class="title">counter</h1>
-            <span id="value">0</span>
-            <div class="button-container">
-                <button class="btn decrease-btn">-</button>
-                <button class="btn reset-btn">Reset</button>
-                <button class="btn increase-btn">+</button>
+        <div class="calculator">
+            <h1 id="total">0</h1>
+            <div class="digits flex">
+                <button class="digit">9</button>
+                <button class="digit">8</button>
+                <button class="digit">7</button>
+                <button class="digit">6</button>
+                <button class="digit">5</button>
+                <button class="digit">4</button>
+                <button class="digit">3</button>
+                <button class="digit">2</button>
+                <button class="digit">1</button>
+                <button class="digit">0</button>
+            </div>
+            <div class="modifiers subgrid">
+                <button class="modifier">AC</button>
+            </div>
+            <div class="operations subgrid">
+                <button class="operation">/</button>
+                <button class="operation">*</button>
+                <button class="operation">-</button>
+                <button class="operation">+</button>
+                <button class="operation">=</button>
             </div>
         </div>
     </div>
-    <script type="module" src="src/js/index.js"></script>
+
+    <script type="module" src="./src/js/index.js"></script>
 </body>
 
 </html>
